# minesweeper

./: CMakeLists.txt  in_game.c  link.txt  main.c  makefile  pre_game.c  solver.c  solver_chance_method.c  solver_helper.c  solver_mark_method.c
Code/: makefile
Code/headers/: board.h  in_game.h  solver_helper.h
Docs/html/: classes.html  dir_678b6df64b106361044942404e2d9c6e.js  dir_a2ed51f7c7095589dc0c78a28547d1d4.html  dir_f9bff4404f64f46af093323cb3b609b6.html  files_dup.js  functions.html  functions_vars.html  globals_func.html  in__game_8c.html  in__game_8h.html  in__game_8h_source.html  navtreedata.js  navtreeindex0.js  pages.html  pre__game_8c.html  pre__game_8h.html  pre__game_8h.js  solver_8c.html  solver_8h.html  solver__chance__method_8h.html  solver__helper_8h_source.html  solver__mark__method_8c.html  solver__mark__method_8h.js  solver__mark__method_8h_source.html  structsolver__helper.html
Header Files/: solver.h  solver_chance_method.h
Source Files/: in_game.c  main.c  pre_game.c  solver.c  solver_chance_method.c  solver_helper.c  solver_mark_method.c
TechnicalReport/source/: main.tex
documentation/: Doxyfile
documentation/html/: annotated.html  annotated_dup.js  board_8h.html  board_8h_source.html  classes.html  dir_678b6df64b106361044942404e2d9c6e.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.js  dir_95e29a8b8ee7c54052c171a88bb95675.html  files.html  files_dup.js  (+43 more)
headers/: board.h  in_game.h  pre_game.h  solver.h  solver_mark_method.h
source/: in_game.c  main.c  pre_game.c  solver.c  solver_chance_method.c  solver_helper.c  solver_mark_method.c
(+29 files in other folders)
